# monorepo-boilerplate

./: .gitignore  .prettierrc.js  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/services/sample-microservice/: BUILD.bazel  go.mod  main.go
bff/services/aggregation/: package.json
frontend/apps/web/: package.json
infrastructure/codes/cdk/: package.json
