load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sample-microservice_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/backend/services/sample-microservice",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "sample-microservice",
    embed = [":sample-microservice_lib"],
    visibility = ["//visibility:public"],
)
